Camplive group shot now background; more alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ section {
 }
 
 #living.banner {
-	background-image: url("../img/living.jpg");
+	background-image: url("../img/live-desktop.png");
 	height: 100%;
 	max-height: 360px;
 }
